update page header

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<link rel="stylesheet" type="text/css" href="css/raffle.css">
 </head>
 <body>
-	<div class="header">
-		<span>Participants:<b id="participant-number"></b></span>
+	<div class="header" style="text-align:center;">
+		<span>Cloud Forum 2016</span>
 	</div>
 	<div class='enter-names'>
 		<p>Enter names separated by new lines:</p>
